# picodb

./: Cargo.toml  README.md
src/: client.rs  collection.rs  constants.rs  embedding.rs  error.rs  index.rs  lib.rs  main.rs  persistence_adapter.rs  search.rs  state.rs
