[package]
name = "pikodb"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
hnsw_rs = "0.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
