[package]
name = "pikodb"
version = "0.0.1"
edition = "2021"
authors = ["Harsh Singh <harshdoesdev@gmail.com>"]
description = "A Pico-sized In-memory Vector Database"
license = "MIT"
repository = "https://github.com/harshdoesdev/pikodb"
readme = "README.md"
keywords = ["in-memory", "vector", "database"]
categories = ["database-implementations"]

[dependencies]
bincode = "1.3.3"
hnsw_rs = "0.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
